--- a/simple webside valencia/styles.css
+++ b/simple webside valencia/styles.css
@@ -105,8 +105,8 @@ p {
     color: gray;
     font-size: 28px;
     word-spacing: 2px;
-    padding: 10px;
-    margin: 10px;
+    padding: 20px 100px;
+    margin: 20px;
 
 }
 
